shoppin cart history now works with email
